-Modified activity_main layout by adding navigation drawer as root layout -Create and modified activity_nav_header layout -Create menu items to use in navigation view -Add some of more icons to use in navigation drawer -Create Item class -Create ItemClickListener interface -Create ItemDetailActivity class -Create ItemsAdapter class -Create ItemsCollection class -Modified MainActivity class -Create MapActivity class -Create activity_map -Add some of more icons to use in some last update activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCdg3DO8mJqWDYeA7hcJp8DrWSkTw1kOaI"/>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ItemDetailActivity" android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".MapActivity" android:parentActivityName=".ItemDetailActivity"/>
+
     </application>
 
 </manifest>
